--- a/preguntas_frecuentes.html
+++ b/preguntas_frecuentes.html
@@ -88,7 +88,7 @@
  
 
 <div class="pregunta1"> 
-<h1>¿¿Cómo pagar por la skin que quiero comprar??</h1>  
+<h1>¿Cómo pagar por la skin que quiero comprar?</h1>  
 <br>
 
 <P>Cuando estas finalizando el pedido, te vamos a mostrar los CBU a los que podes enviar el dinero. Luego tenes que enviar a alguna de nuestras redes sociales una foto con tu factura de pago o el registro de la transferencia.
